# auth

./: .gitignore  build.rs  env.sh  lib  package.json  pnpm-lock.yaml
auth/: Cargo.toml  api.nt
auth/cron/: banTld.coffee
auth/db/function/: ArchId.sql  BrowserId.sql  BrowserVerId.sql  GpuId.sql  HardwareId.sql  IdMail.sql  LangId.sql  MailHostId.sql  MailId.sql  MailNew.sql  NameId.sql  NameLog.sql  OsId.sql  OsVerId.sql  UaId.sql  UidMailNew.sql  UidMailUpdate.sql  UidSignIn.sql
auth/db/procedure/: SplitMail.sql
auth/db/table/: Arch.sql  Browser.sql  BrowserVer.sql  Gpu.sql  Hardware.sql  Host.sql  HostUid.sql  Lang.sql  Mail.sql  MailHost.sql  Name.sql  NameLog.sql  Os.sql  OsVer.sql  Passwd.sql  PasswdLog.sql  Ua.sql  UidClient.sql  UidHost.sql  UidMail.sql  UidMailLog.sql  UidSignIn.sql  WidthHeight.sql
auth/db/trigger/: PasswordLog.sql  UidMailUpdate.sql
auth/i18n/af/: verifyMail.md
auth/i18n/ak/: i18n.nt  verifyMail.md
auth/i18n/am/: verifyMail.md
auth/i18n/ar/: i18n.nt  verifyMail.md
auth/i18n/as/: i18n.nt  verifyMail.md
auth/i18n/ay/: verifyMail.md
auth/i18n/be/: i18n.nt  verifyMail.md
auth/i18n/bg/: verifyMail.md
auth/i18n/bho/: verifyMail.md
auth/i18n/bm/: i18n.nt
auth/i18n/bn/: i18n.nt
auth/i18n/bs/: verifyMail.md
auth/i18n/ca/: verifyMail.md
auth/i18n/ceb/: verifyMail.md
auth/i18n/ckb/: i18n.nt
auth/i18n/co/: i18n.nt  verifyMail.md
auth/i18n/cs/: verifyMail.md
auth/i18n/cy/: i18n.nt  verifyMail.md
auth/i18n/da/: i18n.nt  verifyMail.md
auth/i18n/de/: verifyMail.md
auth/i18n/dv/: i18n.nt  verifyMail.md
auth/i18n/ee/: verifyMail.md
auth/i18n/el/: verifyMail.md
auth/i18n/eo/: i18n.nt  verifyMail.md
auth/i18n/es/: verifyMail.md
auth/i18n/et/: i18n.nt  verifyMail.md
auth/i18n/eu/: verifyMail.md
auth/i18n/fa/: verifyMail.md
auth/i18n/fi/: i18n.nt  verifyMail.md
auth/i18n/fil/: i18n.nt  verifyMail.md
auth/i18n/fr/: i18n.nt  verifyMail.md
auth/i18n/fy/: i18n.nt  verifyMail.md
auth/i18n/ga/: verifyMail.md
auth/i18n/gd/: i18n.nt
auth/i18n/gl/: i18n.nt  verifyMail.md
auth/i18n/gn/: i18n.nt  verifyMail.md
auth/i18n/gom/: verifyMail.md
auth/i18n/gu/: i18n.nt
auth/i18n/haw/: verifyMail.md
auth/i18n/he/: verifyMail.md
auth/i18n/hi/: i18n.nt  verifyMail.md
auth/i18n/hmn/: verifyMail.md
auth/i18n/hr/: i18n.nt  verifyMail.md
auth/i18n/ht/: i18n.nt  verifyMail.md
auth/i18n/hu/: verifyMail.md
auth/i18n/hy/: verifyMail.md
auth/i18n/id/: verifyMail.md
auth/i18n/ig/: verifyMail.md
auth/i18n/ilo/: verifyMail.md
auth/i18n/is/: verifyMail.md
auth/i18n/it/: verifyMail.md
auth/i18n/ja/: i18n.nt  verifyMail.md
auth/i18n/jv/: verifyMail.md
auth/i18n/ka/: i18n.nt  verifyMail.md
auth/i18n/kk/: verifyMail.md
auth/i18n/km/: verifyMail.md
auth/i18n/ko/: i18n.nt  verifyMail.md
auth/i18n/ku/: verifyMail.md
auth/i18n/ky/: i18n.nt  verifyMail.md
auth/i18n/la/: i18n.nt
auth/i18n/lb/: i18n.nt  verifyMail.md
auth/i18n/lg/: i18n.nt  verifyMail.md
auth/i18n/ln/: verifyMail.md
auth/i18n/lo/: i18n.nt  verifyMail.md
auth/i18n/lt/: verifyMail.md
auth/i18n/lus/: i18n.nt
auth/i18n/lv/: i18n.nt  verifyMail.md
auth/i18n/mai/: verifyMail.md
auth/i18n/mg/: verifyMail.md
auth/i18n/mi/: verifyMail.md
auth/i18n/mk/: i18n.nt  verifyMail.md
auth/i18n/mn/: i18n.nt
auth/i18n/mni-Mtei/: i18n.nt
auth/i18n/mr/: verifyMail.md
auth/i18n/ms/: verifyMail.md
auth/i18n/mt/: i18n.nt  verifyMail.md
auth/i18n/my/: i18n.nt  verifyMail.md
auth/i18n/ne/: i18n.nt
auth/i18n/nl/: verifyMail.md
auth/i18n/no/: verifyMail.md
auth/i18n/nso/: i18n.nt  verifyMail.md
auth/i18n/ny/: i18n.nt  verifyMail.md
auth/i18n/om/: i18n.nt  verifyMail.md
auth/i18n/pa/: i18n.nt  verifyMail.md
auth/i18n/pl/: i18n.nt  verifyMail.md
auth/i18n/ps/: verifyMail.md
auth/i18n/pt/: verifyMail.md
auth/i18n/qu/: verifyMail.md
auth/i18n/ro/: i18n.nt  verifyMail.md
auth/i18n/ru/: verifyMail.md
auth/i18n/rw/: verifyMail.md
auth/i18n/sa/: i18n.nt  verifyMail.md
auth/i18n/sd/: i18n.nt  verifyMail.md
auth/i18n/si/: verifyMail.md
auth/i18n/sk/: verifyMail.md
auth/i18n/sl/: i18n.nt  verifyMail.md
auth/i18n/sm/: i18n.nt  verifyMail.md
auth/i18n/sn/: verifyMail.md
auth/i18n/so/: i18n.nt  verifyMail.md
auth/i18n/sq/: i18n.nt  verifyMail.md
auth/i18n/sr/: i18n.nt
auth/i18n/st/: i18n.nt  verifyMail.md
auth/i18n/su/: i18n.nt  verifyMail.md
auth/i18n/sv/: i18n.nt  verifyMail.md
auth/i18n/sw/: i18n.nt  verifyMail.md
auth/i18n/te/: i18n.nt  verifyMail.md
auth/i18n/tg/: i18n.nt  verifyMail.md
auth/i18n/th/: verifyMail.md
auth/i18n/ti/: i18n.nt
auth/i18n/tr/: i18n.nt  verifyMail.md
auth/i18n/ts/: i18n.nt  verifyMail.md
auth/i18n/tt/: i18n.nt
auth/i18n/ug/: i18n.nt
auth/i18n/uk/: i18n.nt
auth/i18n/ur/: i18n.nt
auth/i18n/uz/: i18n.nt  verifyMail.md
auth/i18n/vi/: verifyMail.md
auth/i18n/xh/: i18n.nt  verifyMail.md
auth/i18n/yi/: i18n.nt  verifyMail.md
auth/lua/: README.md  init.lua
auth/sh/: hookEnd.sh  hostNew.coffee
auth/src/: K.rs  conf_meta.rs  exit.rs  i18n.rs  lang.rs  li.rs  lib.rs  lua.rs  macro.rs  me.rs  name.rs  new_mail.rs  passwd.rs  reset.rs  rm.rs  set.rs  set_mail.rs  sign_up.rs
auth/src/db/: id.rs  (+13 more)
captcha/: Cargo.toml  api.nt  build.rs
captcha/src/: db.rs  lib.rs
tmpl/: Cargo.toml  api.nt
tmpl/src/: lib.rs
url/auth/: Cargo.toml  api.nt  api.proto  rustc-ice-2023-11-10T04_56_56-77783.txt  rustc-ice-2023-11-10T04_56_56-77784.txt
url/captcha/: Cargo.toml  api.nt
ws/: Cargo.toml
ws/src/: lib.rs
(+488 files in other folders)
