[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.75"
captcha = { path = "../captcha" }
client = { path = "../../../rust/lib/client" }
r = { path = "../../../rust/lib/r" }
const-str = "0.5.6"
email_address = "0.2.4"
g = { path = "../../../rust/lib/g" }
intbin = "0.1.2"
lang = { path = "../../../rust/lib/lang" }
lazy_static = "1.4.0"
prost = "0.12.3"
sk = { path = "../../../rust/lib/sk" }
sonic-rs = "0.2.4"
t3 = { path = "../../../rust/lib/t3" }
util = { path = "../../../rust/lib/util" }
m = { path = "../../../rust/lib/m" }
tokio = { version = "1.34.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
  "sync"
] }
smtp = { path = "../../../rust/lib/smtp" }
time = { path = "../../../rust/lib/time" }
passwd = { path = "../../../rust/lib/passwd" }
mark = { path = "../../../rust/lib/mark" }
tp = { path = "../../../rust/lib/tp" }
kfn = { path = "../../../rust/lib/kfn" }
serde = "1.0.193"
xstr = "0.1.3"
thiserror = "1.0.50"
ub64 = { version = "0.0.10", features = ["u64"] }
base64 = "0.21.5"
xmail = "0.1.5"
xtld = "0.1.1"
vb = "0.0.7"
trt = "0.1.15"

[build-dependencies]
anyhow = "1.0.75"
prost-build = "0.12.3"
