[package]
name = "ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = { version = "0.6.20", features = ["ws"] }
tokio = { version = "1.34.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
  "sync"
] }
t3 = { path = "../../../rust/lib/t3" }
client = { path = "../../../rust/lib/client" }
headers = "0.3.9"
futures-util = { version = "0.3", default-features = false, features = [
  "sink",
  "std"
] }
tracing = "0.1.40"
lazy_static = "1.4.0"
dashmap = { version = "5.5.3", features = ["inline", "rayon"] }
futures = "0.3.29"
intbin = "0.1.2"
user = { path = "../../../rust/lib/user" }
r = { path = "../../../rust/lib/r" }
anyhow = "1.0.75"
radix_str = "0.1.1"
xhash = "0.1.0"
