[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
t3 = { path = "../../lib/t3" }
axum = "0.6.20"
sonic-rs = "0.2.4"
captcha = { path = "../captcha" }
client = { path = "../../lib/client" }
lang = { path = "../../lib/lang" }
sk = { path = "../../lib/sk" }
util = { path = "../../lib/util" }
conn = { path = "../../lib/conn" }
anyhow = "1.0.75"
intbin = "0.0.5"
prost = "0.12.1"
lazy_static = "1.4.0"
const-str = "0.5.6"
email_address = "0.2.4"
tokio = { version = "1.34.0", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "time",
  "sync"
] }
smtp = { path = "../../lib/smtp" }
passwd = { path = "../../lib/passwd" }
mark = { path = "../../lib/mark" }
tp = { path = "../../lib/tp" }
kfn = { path = "../../lib/kfn" }
serde = "1.0.192"
xstr = "0.1.0"
thiserror = "1.0.50"
http = "0.2.10"
ub64 = { version = "0.0.10", features = ["u64"] }
base64 = "0.21.5"

[build-dependencies]
anyhow = "1.0.75"
prost-build = "0.12.1"
